fix(ui): make the menu visible

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,6 +5,7 @@ header {
   position: sticky !important;
   top: 0;
   padding: 0.5rem 2%;
+  overflow: visible;
 }
 
 
